# MiroThinker

./: AGENTS.md
apps/api-server/: .env.example  .gitignore  README.md  deep_research.py  main.py  mirothinker_agent.py  pyproject.toml  start.sh
apps/miroflow-agent/: .env.example  main.py
apps/miroflow-agent/conf/: config.yaml
apps/miroflow-agent/conf/agent/: firecrawl_demo.yaml  mirothinker_1.7_new_max_200.yaml  tavily_demo.yaml
apps/miroflow-agent/conf/llm/: default.yaml  siliconflow.yaml
apps/miroflow-agent/scripts/: verify_search_and_reader_tools.py
apps/miroflow-agent/src/config/: settings.py
apps/miroflow-agent/src/core/: pipeline.py  tool_executor.py
docs/: OFFICIAL_MCP_SETUP.md
libs/miroflow-tools/src/miroflow_tools/: manager.py
libs/miroflow-tools/src/miroflow_tools/mcp_servers/: FIRECRAWL_TAVILY_README.md  brave_llm_context_mcp_server.py  firecrawl_mcp_server.py  tavily_mcp_server.py
